SERVER-74750: reshardCollection allowed on config.system.sessions via mongos with config shard